@@ -1,23 +1,23 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/enrichResult.R, R/gseAnalyzer.R
+% Please edit documentation in R/enrichResult.R, R/gseaResult.R
 \docType{methods}
-\name{[[,enrichResult-method}
-\alias{[[,enrichResult-method}
-\alias{[[,gseaResult-method}
-\title{[[ method}
+\name{[,enrichResult-method}
+\alias{[,enrichResult-method}
+\alias{[,gseaResult-method}
+\title{[ method}
 \usage{
-\S4method{[[}{enrichResult}(x, term)
+\S4method{[}{enrichResult}(x, i)
 
-\S4method{[[}{gseaResult}(x, term)
+\S4method{[}{gseaResult}(x, i)
 }
 \arguments{
 \item{x}{enrichResult object}
 
-\item{term}{term to query}
+\item{i}{index}
 }
 \description{
-accessing gene set
+accessing enriched result
 
-accessing core enrichment genes
+accessing enriched result
 }
 
